log&cache&trace
