# docs/swagger/swagger.json
@@ -2055,6 +2055,10 @@
                     "description": "有效期 秒为单位",
                     "type": "integer"
                 },
+                "profile": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.ProfileResp"
+                },
                 "refresh_token": {
                     "description": "Refresh Token 暂不使用",
                     "type": "string"
